[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/star_06.png" type="Texture" id=1]
[ext_resource path="res://assets/star_04.png" type="Texture" id=2]
[ext_resource path="res://scenes/Bomb.gd" type="Script" id=3]
[ext_resource path="res://assets/blackhole.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 19.5679

[node name="Bomb" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Star" type="Sprite" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.673795, 0.673795 )
texture = ExtResource( 2 )

[node name="Core" type="Sprite" parent="Star"]
self_modulate = Color( 1, 0, 0, 1 )
rotation = 0.785398
scale = Vector2( 0.369382, 0.369382 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Star"]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )

[node name="ScaleDownTween" type="Tween" parent="."]

[node name="ScaleUpTween" type="Tween" parent="."]

[node name="RotationTween" type="Tween" parent="."]
repeat = true
playback/repeat = true
[connection signal="tween_completed" from="ScaleDownTween" to="." method="_on_ScaleDownTween_tween_completed"]
[connection signal="tween_completed" from="ScaleUpTween" to="." method="_on_ScaleUpTween_tween_completed"]
